Fixing spacing

--- a/source/css/recipe_page.css
+++ b/source/css/recipe_page.css
@@ -1,4 +1,6 @@
-/*search bar*/
+/*
+  search bar
+*/
 
 .search_bar {
   position: absolute;
@@ -61,25 +63,31 @@
   height: 70%;
 }
 
-/*recipe body*/
+/*
+  recipe body
+*/
 .recipe-page {
   display: grid;
   grid-template-columns: [leftmost]25% [endOfIng]50% [endOfRecipe]25% [rightmost]25%;
 
-  /* e.g. 
+  /* 
+      e.g. 
       1fr 1fr
       minmax(10px, 1fr) 3fr
       repeat(5, 1fr)
       50px auto 100px 1fr
   */
   grid-template-rows: 25% 75% 400px;
-  /* e.g. 
+  /* 
+      e.g. 
       min-content 1fr min-content
       100px 1fr max-content
   */
 }
 
-/*kevin: removed item-1 and added ingredients_box and inner classes*/
+/*
+  kevin: removed item-1 and added ingredients_box and inner classes
+*/
 .ingredients_box {
   position: absolute;
   width: 20%;
